--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "mozilla",
     "ast"
   ],
-  "main": "filbert.js",
+  "main": "filbert_loose.js",
   "version": "0.1.20",
   "engines": {"node": ">=0.4.0"},
   "author": {"name": "Matt Lott",
